--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
 .postActionButton {
 	padding-bottom: 5px;
+	padding-top: 7px;
+    padding-right: 10px;
 }
 
 .postSpeedOptionsContainer {
@@ -25,4 +27,13 @@
 
 .reelSpeedOption {
 
+}
+
+.popover {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    z-index: 1000;
 }
