--- a/popupStyle.css
+++ b/popupStyle.css
@@ -13,9 +13,16 @@ body {
 }
 
 #extension-icon {
-    width: 20px; /* Specify width */
-    height: 20px; /* Specify height */
+    width: 20px;
+    height: 20px;
     margin-right: 10px;
+}
+
+#love-icon {
+    width: 12px;
+    height: 10px;
+    margin-right: 1px;
+    vertical-align: text-top;
 }
 
 #extension-name {
