--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 	text-align: unset;
 }
 
-.postSpeedOption {
+.postSpeedOptionButton {
 	display: inline;
 	padding-right: 5px;
 }
@@ -25,7 +25,7 @@
 	text-align: center;
 }
 
-.reelSpeedOption {
+.reelSpeedOptionButton {
 
 }
 
@@ -36,4 +36,9 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     padding: 10px;
     z-index: 1000;
+}
+
+
+.darkMode {
+	filter: invert(1);
 }
